=========1.4.51b================
- Support for new nps command. Code provided by Harm Geert Muller. 
=========1.4.50b================
- Change in architecture. Persistence is disabled. The user is required to push the "Save" button explicitly to save the settings. What is retained is that in case PG is invoked with -noini (or as a special exception for WB 4.4.0 when the config files are polyglot_1st.ini or polyglot_2nd.ini) then PG uses a default config file whose name is derived from the engine name. 
- New option: OnlyWbOptions (default: true). Restrict the options that PG sends to those that are potentially useful for WinBoard.
=========1.4.47b================
- Try to detect if the engine is not an UCI engine.
=========1.4.46b================
- The default persistence directory on Windows is now _PG. The names of the engine specific ini files are mangled so as not to contain spaces. 
- PG now tries to guess if a string option is really a file or a path (like in the Arena GUI). 
=========1.4.45b================
- The engine specific config files (<myname>.ini) are now stored in a separate directory. $HOME/.polyglot on Linux and "./Polyglot Settings" on Windows. 
- The engine specific config files are now complete config files. So they can be used in a stand alone fashion.
- Implemented a minor hack to make xboard show error messages during startup. 
=========1.4.44b================
- "Implementation" of new buttons and controls.
- The "Persist" option is now persistent. That is if you turn of "Persist" then as a special case PG will remember this.
- There is now a "reset" button which restores the default options. The code is commented out since WB does not support it yet.
=========1.4.42b================
- SaveSettingsOnExit/SaveFile renamed as Persist/PersistFile.
- Many bug fixes in the persistence feature.